# GentisAI

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  README_features.md  advanced_example.py  advanced_ollama_example.py  advanced_ollama_tools_example.py  hybrid_routing_example.py  mkdocs.yml  ollama_example.py  pyproject.toml  quick_mock_start.py  quick_start.py  simple_example.py  streaming_example.py  test_parallel_gemini.py  test_vllm_mock.py  tools_example.py  tutorial_app.py  vllm_example.py
.github/workflows/: publish.yml  test.yml
aghentic_minds/llm/: mock.py
comparison/: README_comparaison.md  aghentic_minds_results_gp.txt  aghentic_minds_results_np.txt  benchmark.py  crewai_results_gp.txt  list_models.py  readme_comp.md  requirements.txt
comparison/chat_results/: gentisai_results_gp.txt  gentisai_results_np.txt
debug-cache/: user_123_debug.json
docs/: api-reference.md  getting-started.md  index.md
docs/features/: hybrid-routing.md  parallel-execution.md  streaming.md
examples/: advanced_example.py  advanced_ollama_example.py  advanced_ollama_tools_example.py  hybrid_routing_example.py  ollama_example.py  quick_mock_start.py  simple_example.py  streaming_example.py  tools_example.py  vllm_example.py
expertflow/: cli.py  router.py  types.py
expertflow/llm/: gemini.py
gentis_ai/: router.py  session.py
gentis_minds/: session.py
switchboard_ai/: __init__.py  memory.py  session.py
test_init_project/: main.py
tests/: sanity_check.py  test_basic.py  test_memory.py  test_router.py  test_session.py  test_token_usage.py
(+9 files in other folders)
