[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gentis-ai"
version = "0.1.13"
description = "A lightweight library for multi-persona AI agent routing and state management."
authors = [
  { name="GhaouiYoussef", email="youssefghaoui.pro@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11.4"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-genai>=0.3.0", 
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1"
]

[project.urls]
"Homepage" = "https://github.com/GhaouiYoussef/GentisAI"

[tool.setuptools.packages.find]
include = ["gentis_ai*"]
exclude = ["test_init_project*", "tests*"]

[tool.setuptools.package-data]
"gentis_ai" = ["prompts/**/*"]
